--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Racismo em jogo</title>
+    <link rel="stylesheet" href="STYLE.CSS">
 </head>
 <body>
+    
     <header>
 
 
@@ -19,3 +20,6 @@
     <footer>
 
     </footer>
+
+</body>
+</html>
