--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,25 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Racismo em jogo</title>
-    <link rel="stylesheet" href="STYLE.CSS">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Início - Cultura Indígena</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    <header>
 
+  <header class="topo">
+    <h1 class="logo">Cultura Indígena</h1>
+    <nav class="menu">
+      <a href="index.html">Início</a>
+      <a href="historia.html">História</a>
+      <a href="galeria.html">Galeria</a>
+    </nav>
+  </header>
 
-    </header>
-    <main>
+  oi
+  <main class="principal">
 
+    <!-- Apresentação -->
+    <div class="caixa inicio">
+      <div class="texto">
+        <h2>Bem-vindos!</h2>
+        <p>
+          Este site foi criado no projeto de Programação para apresentar a
+          <strong>cultura indígena</strong> no Brasil e refletir sobre
+          <strong>desigualdades e preconceitos</strong> que ainda afetam
+          diferentes povos originários.
+        </p>
+        <p>
+          O Brasil é casa de centenas de povos indígenas, com línguas, saberes,
+          artes, modos de vida e formas de organização muito diversos. Valorizar
+          essa pluralidade é reconhecer a história e o presente desses povos.
+        </p>
+      </div>
+      <div class="imagem">
+        <img src="IMAGEM/indigena1.jpg" alt="índios de mãos dadas">
+      </div>
+    </div>
 
+    <!-- Cultura e respeito -->
+    <div class="caixa destaque">
+      <div class="texto">
+        <h2>Cultura, Línguas e Saberes</h2>
+        <p>
+          A cultura indígena envolve conhecimentos sobre a natureza, a saúde, a
+          agricultura, a arte, a música, as danças e as narrativas orais. Muitas
+          comunidades mantêm <strong>línguas próprias</strong> e práticas
+          tradicionais que ensinam respeito ao território e ao coletivo.
+        </p>
+        <p>
+          Aprender sobre esses saberes é uma forma de combater estereótipos e
+          reconhecer contribuições fundamentais para a ciência, para a
+          biodiversidade e para a história do nosso país.
+        </p>
+      </div>
+    </div>
 
-    </main>
-    <footer>
+    <!-- Desigualdade e preconceito -->
+    <div class="caixa importancia">
+      <div class="texto">
+        <h2>Desigualdade e Preconceito</h2>
+        <p>
+          Apesar das riquezas culturais, muitos povos enfrentam <strong>desigualdades</strong>
+          no acesso a direitos básicos: educação, saúde, moradia, proteção de
+          seus territórios e oportunidade de participação social.
+        </p>
+        <p>
+          O <strong>preconceito</strong> aparece em estereótipos, invisibilização
+          na mídia e desrespeito às tradições. Combater isso começa na escola:
+          conhecer, ouvir e valorizar as vozes indígenas é essencial para uma
+          sociedade mais justa.
+        </p>
+        <p>
+          Nosso objetivo aqui é aprender com respeito, apresentar informações de
+          fontes confiáveis e incentivar atitudes que promovam dignidade,
+          diversidade e diálogo.
+        </p>
+      </div>
+    </div>
 
-    </footer>
+  </main>
+
+  <!-- RODAPÉ -->
+  <footer class="rodape">
+    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Profª Nane</strong></p>
+  </footer>
 
 </body>
 </html>
+
