racismo no futebol

--- a/Galeria.html
+++ b/Galeria.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Galeria - Racismo no Futebol</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+  <!-- TOPO -->
+  <header class="topo">
+    <h1 class="logo">Racismo no Futebol</h1>
+    <nav class="menu">
+      <a href="index.html">Início</a>
+      <a href="historia.html">História</a>
+      <a href="galeria.html">Galeria</a>
+    </nav>
+  </header>
+
+  <!-- CONTEÚDO PRINCIPAL -->
+  <main class="principal">
+
+    <!-- Texto de introdução -->
+    <div class="caixa introducao">
+      <div class="texto">
+        <h2>Galeria: Racismo no Futebol</h2>
+        <p>
+          O racismo no futebol é um reflexo das desigualdades sociais e da
+          intolerância que ainda existem em nossa sociedade. Jogadores,
+          torcedores e profissionais do esporte já sofreram ataques racistas
+          dentro e fora dos estádios.
+        </p>
+        <p>
+          Esta galeria apresenta imagens de campanhas, protestos e momentos de
+          resistência no futebol. São registros que mostram a importância da
+          luta por igualdade, respeito e justiça no esporte mais popular do
+          mundo.
+        </p>
+      </div>
+    </div>
+
+    <!-- Galeria de imagens -->
+    <div class="caixa galeria">
+      <div class="imagens-galeria">
+        <img src="IMAGEM/racismo 2" alt="Jogador segurando cartaz contra o racismo no futebol">
+        <img src="IMAGEM/racismo.png" alt="Faixa com mensagem contra o racismo em partida de futebol">
+        <img src="IMAGEM/racismo3" alt="Atletas protestando ajoelhados contra o racismo">
+        <img src="IMAGEM/racismo4" alt="Torcida com faixa de apoio à diversidade no futebol">
+        <img src="IMAGEM/racismo4" alt="Jogador reage a ofensas racistas apontando para sua pele">
+        <img src="IMAGEM/recismo5" alt="Campanha mundial contra o racismo no esporte">
+      </div>
+    </div>
+
+  </main>
+
+  <!-- RODAPÉ -->
+  <footer class="rodape">
+    <p>&copy; 2025 — Projeto escolar. Feito por: <b>Prof.ª Nane</b></p>
+  </footer>
+
+</body>
+</html>
