--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Início - Cultura Indígena</title>
+  <title>Início - Racismo no Futebol</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <header class="topo">
-    <h1 class="logo">Cultura Indígena</h1>
+    <h1 class="logo">Racismo no Futebol</h1>
     <nav class="menu">
       <a href="index.html">Início</a>
       <a href="historia.html">História</a>
@@ -17,7 +17,6 @@
     </nav>
   </header>
 
-  oi
   <main class="principal">
 
     <!-- Apresentação -->
@@ -25,36 +24,35 @@
       <div class="texto">
         <h2>Bem-vindos!</h2>
         <p>
-          Este site foi criado no projeto de Programação para apresentar a
-          <strong>cultura indígena</strong> no Brasil e refletir sobre
-          <strong>desigualdades e preconceitos</strong> que ainda afetam
-          diferentes povos originários.
+          Este site foi criado no projeto de Programação para refletir sobre o
+          <strong>racismo no futebol</strong> — um problema social grave que ainda afeta
+          atletas, torcedores e a sociedade como um todo.
         </p>
         <p>
-          O Brasil é casa de centenas de povos indígenas, com línguas, saberes,
-          artes, modos de vida e formas de organização muito diversos. Valorizar
-          essa pluralidade é reconhecer a história e o presente desses povos.
+          O futebol, apesar de ser um esporte que une multidões, também revela
+          <strong>desigualdades e preconceitos raciais</strong>. É essencial falar sobre isso
+          para promover respeito, igualdade e justiça dentro e fora dos campos.
         </p>
       </div>
       <div class="imagem">
-        <img src="IMAGEM/indigena1.jpg" alt="índios de mãos dadas">
+        <img src="IMAGEM/racismo1.jpg" alt="jogadores contra o racismo">
       </div>
     </div>
 
     <!-- Cultura e respeito -->
     <div class="caixa destaque">
       <div class="texto">
-        <h2>Cultura, Línguas e Saberes</h2>
+        <h2>O que é Racismo no Futebol?</h2>
         <p>
-          A cultura indígena envolve conhecimentos sobre a natureza, a saúde, a
-          agricultura, a arte, a música, as danças e as narrativas orais. Muitas
-          comunidades mantêm <strong>línguas próprias</strong> e práticas
-          tradicionais que ensinam respeito ao território e ao coletivo.
+          Racismo no futebol ocorre quando jogadores ou torcedores são
+          <strong>discriminados por sua cor de pele, origem ou etnia</strong>.
+          Isso pode acontecer por meio de xingamentos, gestos ofensivos, cânticos ou
+          até exclusão de oportunidades dentro dos clubes.
         </p>
         <p>
-          Aprender sobre esses saberes é uma forma de combater estereótipos e
-          reconhecer contribuições fundamentais para a ciência, para a
-          biodiversidade e para a história do nosso país.
+          Mesmo com campanhas de combate ao racismo, como "Diga Não ao Racismo",
+          muitos casos continuam sendo registrados em jogos nacionais e internacionais.
+          A luta contra o preconceito precisa ser constante e coletiva.
         </p>
       </div>
     </div>
@@ -62,22 +60,21 @@
     <!-- Desigualdade e preconceito -->
     <div class="caixa importancia">
       <div class="texto">
-        <h2>Desigualdade e Preconceito</h2>
+        <h2>Desigualdade e Consequências</h2>
         <p>
-          Apesar das riquezas culturais, muitos povos enfrentam <strong>desigualdades</strong>
-          no acesso a direitos básicos: educação, saúde, moradia, proteção de
-          seus territórios e oportunidade de participação social.
+          O racismo no futebol causa <strong>danos emocionais e sociais</strong> aos atletas,
+          afeta suas carreiras e contribui para a exclusão de talentos que
+          mereciam respeito e valorização.
         </p>
         <p>
-          O <strong>preconceito</strong> aparece em estereótipos, invisibilização
-          na mídia e desrespeito às tradições. Combater isso começa na escola:
-          conhecer, ouvir e valorizar as vozes indígenas é essencial para uma
-          sociedade mais justa.
+          Além disso, muitos jogadores negros enfrentam <strong>desigualdade de tratamento</strong>,
+          ganhando menos visibilidade na mídia e sendo menos lembrados para cargos de
+          liderança no esporte, como técnicos ou dirigentes.
         </p>
         <p>
-          Nosso objetivo aqui é aprender com respeito, apresentar informações de
-          fontes confiáveis e incentivar atitudes que promovam dignidade,
-          diversidade e diálogo.
+          Combater o racismo é papel de todos: torcedores, clubes, escolas, imprensa
+          e autoridades. Devemos promover a igualdade e mostrar que no futebol —
+          como na vida — <strong>não há espaço para o preconceito</strong>.
         </p>
       </div>
     </div>
@@ -88,7 +85,3 @@
   <footer class="rodape">
     <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Profª Nane</strong></p>
   </footer>
-
-</body>
-</html>
-
