racimo no futebol

--- a/Historia.html
+++ b/Historia.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>História - Racismo</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+  <!-- TOPO -->
+  <header class="topo">
+    <h1 class="logo">Racismo</h1>
+    <nav class="menu">
+      <a href="index.html">Início</a>
+      <a href="historia.html">História</a>
+      <a href="galeria.html">Galeria</a>
+    </nav>
+  </header>
+
+  <!-- CONTEÚDO PRINCIPAL -->
+  <main class="principal">
+
+    <!-- Introdução -->
+    <div class="caixa introducao">
+      <div class="texto">
+        <h2>Entendendo a História do Racismo</h2>
+        <p>
+          O racismo é um problema social que tem raízes profundas na história da
+          humanidade. Trata-se da discriminação e preconceito contra grupos de
+          pessoas com base em características físicas, culturais ou étnicas.
+        </p>
+        <p>
+          Historicamente, o racismo foi usado para justificar a exploração,
+          escravidão e exclusão de populações inteiras. Ele afetou e ainda afeta
+          a vida de milhões de pessoas ao redor do mundo.
+        </p>
+      </div>
+    </div>
+
+    <!-- Período histórico -->
+    <div class="caixa colonizacao">
+      <div class="texto">
+        <h2>Colonialismo, Escravidão e Resistência</h2>
+        <p>
+          Durante o período colonial, o racismo foi usado para legitimar a
+          escravidão de povos africanos e a colonização de terras indígenas,
+          impondo uma hierarquia social desigual e violenta.
+        </p>
+        <p>
+          Apesar da opressão, os povos escravizados e colonizados resistiram
+          através da preservação de suas culturas, lutas por liberdade e pela
+          defesa dos seus direitos.
+        </p>
+      </div>
+    </div>
+
+    <!-- Direitos e avanços -->
+    <div class="caixa direitos">
+      <div class="texto">
+        <h2>Conquistas e Desafios na Luta contra o Racismo</h2>
+        <p>
+          Movimentos sociais, legislações e políticas públicas foram criados para
+          combater o racismo e promover a igualdade racial. A Constituição
+          brasileira de 1988, por exemplo, assegura direitos e proteção contra a
+          discriminação racial.
+        </p>
+        <p>
+          No entanto, o racismo estrutural ainda persiste em várias áreas da
+          sociedade, como educação, mercado de trabalho, justiça e acesso a
+          serviços básicos, exigindo constante vigilância e ação.
+        </p>
+      </div>
+    </div>
+
+    <!-- Valorização e combate -->
+    <div class="caixa valorizacao">
+      <div class="texto">
+        <h2>Promovendo Respeito e Igualdade</h2>
+        <p>
+          Combater o racismo é responsabilidade de toda a sociedade. É
+          fundamental valorizar a diversidade cultural, ouvir as vozes de grupos
+          historicamente marginalizados e garantir oportunidades iguais para
+          todos.
+        </p>
+        <p>
+          A educação é uma ferramenta essencial nesse processo, pois ajuda a
+          desconstruir preconceitos e construir uma cultura de respeito,
+          solidariedade e justiça social.
+        </p>
+      </div>
+    </div>
+
+  </main>
+
+  <!-- RODAPÉ -->
+  <footer class="rodape">
+    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Nome do Aluno</strong></p>
+  </footer>
+
+</body>
+</html>
