racismo no futebol

--- a/Galeria.html
+++ b/Galeria.html
@@ -55,7 +55,7 @@
 
   <!-- RODAPÉ -->
   <footer class="rodape">
-    <p>&copy; 2025 — Projeto escolar. Feito por: <b>Prof.ª Nane</b></p>
+    <p>&copy; 2025 — Projeto escolar. Feito por: <b>Victor luan de abreu</b></p>
   </footer>
 
 </body>
