--- a/Historia.html
+++ b/Historia.html
@@ -94,7 +94,7 @@
 
   <!-- RODAPÉ -->
   <footer class="rodape">
-    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Nome do Aluno</strong></p>
+    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Victor luan de abreu</strong></p>
   </footer>
 
 </body>
