--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -83,6 +83,6 @@
 
   <!-- RODAPÉ -->
   <footer class="rodape">
-    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Profª Nane</strong></p>
+    <p>&copy; 2025 — Projeto escolar. Feito por: <strong>Victor Luan</strong></p>
   </footer>
 </body>
