--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </p>
       </div>
       <div class="imagem">
-        <img src="IMAGEM/racismo1.jpg" alt="jogadores contra o racismo">
+        <img src="imagem/racismo10.jpeg" alt="jogadores contra o racismo">
       </div>
     </div>
 
