--- a/galeria.html
+++ b/galeria.html
@@ -42,12 +42,12 @@
     <!-- Galeria de imagens -->
     <div class="caixa galeria">
       <div class="imagens-galeria">
-        <img src="IMAGEM/racismo 2" alt="Jogador segurando cartaz contra o racismo no futebol">
-        <img src="IMAGEM/racismo.png" alt="Faixa com mensagem contra o racismo em partida de futebol">
-        <img src="IMAGEM/racismo3" alt="Atletas protestando ajoelhados contra o racismo">
-        <img src="IMAGEM/racismo4" alt="Torcida com faixa de apoio à diversidade no futebol">
-        <img src="IMAGEM/racismo4" alt="Jogador reage a ofensas racistas apontando para sua pele">
-        <img src="IMAGEM/recismo5" alt="Campanha mundial contra o racismo no esporte">
+        <img src="imagem/racismo7.jpg" alt="Jogador segurando cartaz contra o racismo no futebol">
+        <img src="imagem/racismo8.jpg" alt="Faixa com mensagem contra o racismo em partida de futebol">
+        <img src="imagem/racismo9.jpeg" alt="Atletas protestando ajoelhados contra o racismo">
+        <img src="imagem/racismo1.jpg" alt="Torcida com faixa de apoio à diversidade no futebol">
+        <img src="imagem/racismo2.jpg" alt=" reage a ofensas racistas apontando para sua pele">
+        <img src="imagem/racismo3.png" alt=" mundial contra o racismo no esporte">
       </div>
     </div>
 
@@ -55,7 +55,7 @@
 
   <!-- RODAPÉ -->
   <footer class="rodape">
-    <p>&copy; 2025 — Projeto escolar. Feito por: <b>Victor luan de abreu</b></p>
+    <p>&copy; 2025 — Projeto escolar. Feito por: <b>Victor Luan de Abreu</b></p>
   </footer>
 
 </body>
